public interface Tile {
    void setActive(boolean enabled);
    String displayedName();
}
