import javax.swing.*;

public abstract class TileButton extends JButton implements Tile {
}
